--- a/h20.css
+++ b/h20.css
@@ -21,7 +21,6 @@ h1{
 }
 
 #fortune{
-    color: #09090977;
     font-size: 24px;
     text-align: center;
     font-size: 80px;
@@ -34,7 +33,6 @@ h1{
     -webkit-background-clip: text;
     text-fill-color: transparent;
     -webkit-text-fill-color: transparent;
-  
 
   
 
@@ -71,3 +69,71 @@ h1{
   border: 1px solid rgba(209, 213, 219, 0.3);
 
 }
+
+.bio {
+    display:flex;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 20px;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    background: rgb(195, 174, 174);
+    border: 5px solid #f9f7f8;
+    border-radius: 5px;
+    color: #0c100e;
+    cursor: pointer;
+    height: 300px;
+    width: 300px;
+    box-shadow:
+  4.5px 4.5px 3.6px rgba(0, 0, 0, 0.07),
+  12.5px 12.5px 10px rgba(0, 0, 0, 0.1),
+  30.1px 30.1px 24.1px rgba(0, 0, 0, 0.13),
+  100px 100px 80px rgba(0, 0, 0, 0.2)
+;
+
+
+backdrop-filter: blur(16px) saturate(180%);
+-webkit-backdrop-filter: blur(16px) saturate(180%);
+background-color: rgba(255, 255, 255, 0.64);
+border-radius: 12px;
+border: 1px solid rgba(209, 213, 219, 0.3);
+
+ 
+}
+
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+
+}
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: landscape) { }
+
+  @media only screen 
+    and (device-width: 375px) 
+    and (device-height: 812px) 
+    and (-webkit-device-pixel-ratio: 3) { }
+
+    @media only screen 
+    and (device-width: 390px) 
+    and (device-height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) { }
